# dev-toolbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  config.json  pyproject.toml  requirements.txt
examples/: dados.json  urls.txt
scripts/: gerar_screenshots.py
src/: __init__.py  config.py  main.py  report.py
src/tools/: __init__.py  batch_renamer.py  duplicate_finder.py  format_converter.py  password_gen.py  system_monitor.py  url_checker.py
