[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dev-toolbox"
version = "1.0.0"
description = "Caixa de ferramentas para desenvolvedores via CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
]

[project.scripts]
dev-toolbox = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
